--- a/src/renderer/components/sidebar/Sidebar.css
+++ b/src/renderer/components/sidebar/Sidebar.css
@@ -11,6 +11,8 @@ ul {
 	padding: 0.5rem;
 }
 
+.sidebar-button,
+.logo,
 li {
 	width: 5rem;
 	height: 5rem;
@@ -21,16 +23,16 @@ li {
 	flex-direction: column;
 	font-size: 12px;
 	text-align: center;
-	border-radius: 1rem;
-	padding: 5px;
+	border-radius: 0.5rem;
+	user-select: none;
 }
 
 .sidebar-button:hover {
 	background-color: var(--hover);
+	cursor: default;
 }
 
-.divider {
-	background-color: var(--border);
-	height: 1px;
-	margin: 0.5rem 0;
+.sidebar-container {
+	min-width: 6rem;
+	max-width: 6rem;
 }
