--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -383,3 +383,19 @@ input[type="reset"] {
 	cursor: pointer;
 	outline: inherit;
 }
+
+h3,
+p {
+	margin: 0;
+}
+
+.divider {
+	background-color: var(--border);
+	height: 1px;
+	margin: 0.5rem 0;
+	width: 100%;
+}
+
+html {
+	height: 100%; /* Ensure html has full height */
+}
