--- a/src/renderer/components/sidebar/Sidebar.css
+++ b/src/renderer/components/sidebar/Sidebar.css
@@ -2,12 +2,14 @@ ul {
 	list-style-type: none;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	margin: 0;
 	margin-block-start: 0;
 	margin-block-end: 0;
 	padding-inline-start: 0;
 	border-right: 1px solid var(--border);
-	min-height: 100vh;
+	min-height: calc(100% - 16px); /* Account for padding */
+	max-height: calc(100% - 32px);
 	padding: 0.5rem;
 }
 
@@ -35,4 +37,9 @@ li {
 .sidebar-container {
 	min-width: 6rem;
 	max-width: 6rem;
+	max-height: calc(100% - 32px);
+}
+
+.sidebar-upper {
+	height: 100%;
 }
