broken commit, in process of finally finishing mod installation routine

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -104,11 +104,9 @@ body {
 	overflow-x: hidden;
 }
 
-.filter-btn {
-}
-
 .filter-buttons {
 	display: flex;
 	gap: 1rem;
 	justify-content: center;
+	height: 100%;
 }
