--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,6 +1,5 @@
 body {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Helvetica, Arial, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	height: 100%;
 }
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -366,7 +365,7 @@ template {
 }
 
 :root {
-	--background: #f3f4f7;
+	--background: #fff;
 	--foreground: #333;
 	--border: rgba(0.9, 0.9, 0.9, 0.2);
 	--hover: rgba(0.6, 0.6, 0.6, 0.1);
