--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -23,6 +23,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
+	padding-top: 2rem;
 }
 
 .install-button {
@@ -114,4 +115,57 @@ body {
 	gap: 1rem;
 	justify-content: center;
 	height: 100%;
+}
+
+.button-wrapper {
+	display: flex;
+	gap: 1rem;
+}
+
+button,
+input[type="submit"],
+input[type="reset"] {
+	color: #000;
+	/* border: 1px solid black; */
+	border-radius: 0.5rem;
+	background: none;
+	padding: 0.5rem 1rem;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+input {
+	border-radius: 0.2rem;
+	border: 1px solid #ccc;
+	height: 2rem;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
+
+.input-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+}
+
+.checkbox-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.5rem;
+}
+
+input[type="checkbox"] {
+	width: 16px;
+	height: 16px;
+}
+
+a {
+	text-decoration: none;
+	color: var(--foreground);
+}
+
+a:hover {
+	color: #777;
 }
