--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -360,15 +360,31 @@ template {
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
-	background-color: var(--background);
-	color: var(--foreground);
+	background-color: var(--bg);
+	color: var(--text);
 }
 
 :root {
-	--background: #fff;
-	--foreground: #333;
-	--border: rgba(0.9, 0.9, 0.9, 0.2);
-	--hover: rgba(0.6, 0.6, 0.6, 0.1);
+	/* --background: #fff;
+	--foreground: #333; */
+	/* --border: rgba(0.9, 0.9, 0.9, 0.2); */
+	/* --hover: rgba(0.6, 0.6, 0.6, 0.1); */
+
+	/* Dark mode colors */
+	--bg-dark: hsl(0 0% 0%);
+	--bg: hsl(0 0% 5%);
+	--bg-light: hsl(0 0% 10%);
+	--text: hsl(0 0% 95%);
+	--text-muted: hsl(0 0% 70%);
+}
+
+#root.light {
+	/* Light mode colors */
+	--bg-dark: hsl(0 0% 90%);
+	--bg: hsl(0 0% 95%);
+	--bg-light: hsl(0 0 100%);
+	--text: hsl(0 0 95%);
+	--text-muted: hsl(0 0% 30%);
 }
 
 /** Remove default button styling */
@@ -390,7 +406,7 @@ p {
 }
 
 .divider {
-	background-color: var(--border);
+	background-color: var(--bg-light);
 	min-height: 1px;
 	margin: 0.5rem 0;
 	width: 100%;
@@ -408,7 +424,7 @@ html {
 
 .btn {
 	padding: 1rem;
-	border: 1px solid var(--border);
+	border: 1px solid var(--bg-light);
 	border-radius: 0.5rem;
 	display: flex;
 	justify-content: center;
@@ -425,7 +441,7 @@ html {
 
 /* Style the track (the bar the thumb slides along) */
 ::-webkit-scrollbar-track {
-	background: var(--background);
+	background: var(--bg);
 	border-radius: 10px; /* Make the track rounded */
 	/* Add slight margin so track doesn't touch edge */
 	margin: 2px;
@@ -433,12 +449,12 @@ html {
 
 /* Style the thumb (the draggable part) */
 ::-webkit-scrollbar-thumb {
-	background-color: var(--foreground);
+	background-color: var(--text);
 	border-radius: 10px; /* Make the thumb rounded */
 
 	/* Create the "smaller initial size" effect using a border that matches the track */
 	/* The border effectively shrinks the visible colored part of the thumb */
-	border: 3px solid var(--background);
+	border: 3px solid var(--bg);
 	background-clip: content-box; /* Ensure border is outside the background */
 
 	/* Add transition for smooth hover effect */
